@@ -1,4 +1,4 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header$
 
@@ -6,13 +6,14 @@ EAPI=2
 
 inherit gnome2
 
-SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 DESCRIPTION="Extensible scalable virtual keyboard for GNOME"
-KEYWORDS="~amd64 ~arm ~x86"
-SLOT="0"
-IUSE="accessibility doc gnome +libnotify +xtst"
-LICENSE="GPL-2"
 HOMEPAGE="http://florence.sourceforge.net/"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~arm ~x86"
+IUSE="accessibility doc gnome +libnotify +xtst"
 
 RDEPEND="
 	dev-libs/glib:2
